styles/mainPage.css
.firstSection {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 90px;
}

.carousel {
  width: 100%;
  height: 800px;
  border-radius: 40px;
  position: relative;
  border: 3px solid var(--color1);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: hidden;
  -webkit-box-shadow: 10px 10px 11px 0px rgba(181, 159, 189, 1);
  -moz-box-shadow: 10px 10px 11px 0px rgba(181, 159, 189, 1);
  box-shadow: 10px 10px 11px 0px rgba(181, 159, 189, 1);
}

.carouselHeader {
  width: 100%;
  display: flex;
  justify-content: center;
  height: 37px;
  background-color: var(--color3);
  z-index: 2;
  border-bottom: 3px solid var(--color1);
  position: relative;
}

.carouselRow {
  width: 99.9%;
  height: 28px;
  background-color: var(--color2);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 30px;
  border-radius: 40px 40px 0 0;
  position: absolute;
  bottom: 0;
}

.carouselTitle {
  font-family: "Thixel", sans-serif;
  text-transform: uppercase;
  color: #fff;
  font-size: 25px;
  letter-spacing: 3px;
  cursor: default;
}

.carouselButtons {
  display: flex;
  align-items: center;
  justify-content: end;
  gap: 10px;
}

.carouselButton {
  height: 20px;
}

.carouselImagesArea {
  width: 100%;
  height: calc(100% - 60px);
  display: flex;
  align-items: center;
  position: relative;
  overflow: hidden;
}

.carouselImages {
  width: 100%;
  height: 100%;
  background: var(--color4);
  display: flex;
  flex-direction: column;
  position: relative;
  transition: transform 0.5s ease;
}

.carouselImages img {
  width: 100%;
  height: 745px;
  object-fit: cover;
}

.carouselScrollBar {
  writing-mode: vertical-lr;
  position: absolute;
  height: 92.5%;
}

.carouselScroll input[type="range"] {
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  cursor: pointer;
  width: 30px;
  height: 92.5%;
  background: var(--color1);
}

.carouselScroll input[type="range"]:focus {
  outline: none;
}

.carouselScroll input[type="range"]::-webkit-slider-runnable-track {
  background: var(--color3);
}

.carouselScroll input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  margin-top: -11px;
  background: var(--color3);
  height: 100px;
  width: 28px;
}

.carouselScroll input[type="range"]::-moz-range-track {
  background: var(--color3);
}

.carouselImagesArea input[type="range"]::-moz-range-thumb {
  border: none;
  border-radius: 0rem;
  height: 100px;
  background: var(--color1);
  border: 3px solid var(--color1);
  width: 28px;
}

.carouselScroll {
  height: 100%;
  width: 30px;
  background: var(--color3);
  position: absolute;
  right: 0;
  z-index: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.carouselScrollButton {
  width: 30px;
  height: 30px;
  border: 3px solid var(--color1);
  background: var(--color3);
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.carouselScrollBody {
  height: 100%;
  width: 28px;
  border-left: 3px solid var(--color1);
}

.carouselScrollbar {
  width: 28px;
  height: 100px;
  background: var(--color1);
  border: 3px solid var(--color1);
  border-left: none;
  position: relative;
  top: 30%;
}

.carouselBottom {
  width: 100%;
  height: 20px;
  background: var(--color2);
  z-index: 2;
  border-top: 3px solid var(--color1);
}

.featuresSection {
  width: 100%;
  margin-top: 30px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.feature {
  width: 24%;
  display: flex;
  align-items: center;
  gap: 20px;
}

.outlineSquare {
  width: 80px;
  height: 80px;
  background: var(--color3);
  display: flex;
  align-items: center;
  justify-content: center;
  border: 3px solid var(--color1);
  border-radius: 15px;
}

.inlineSquare {
  width: 65px;
  height: 65px;
  background: var(--color4);
  border: 3px solid var(--color1);
  border-radius: 15px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.featureIcon {
  width: 50px;
}

.featureTitle {
  font-family: "Thixel", sans-serif;
  text-transform: uppercase;
  color: var(--color1);
  font-weight: normal;
  font-size: 25px;
  letter-spacing: 3px;
  cursor: default;
}

.featureDescription {
  font-family: "Poppins", sans-serif;
  font-size: 16px;
  text-transform: uppercase;
  color: var(--color0);
  font-weight: 500;
  letter-spacing: 1px;
  cursor: default;
}

.categories {
  width: 100%;
  margin-top: 130px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.category {
  width: 19%;
  height: 350px;
  background: var(--color3);
  border: 3px solid var(--color1);
  position: relative;
  border-radius: 30px;
  padding: 10px;
}

.categoryTitle {
  font-family: "Martian Mono", sans-serif;
  text-transform: lowercase;
  color: var(--color1);
  font-weight: 600;
  font-size: 15px;
  cursor: default;
  padding: 10px;
  background: var(--color4);
  position: absolute;
  z-index: 1;
  top: -20px;
  left: 20px;
  border: 3px solid #fe84c4;
  border-radius: 40px;
  text-align: center;
}

.categoryImage {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 30px;
  border: 3px solid var(--color1);
}

